[package]
name = "hed"
version = "0.1.1"
edition = "2018"
authors = ["Arjen Wiersma <arjen@wiersma.org>"]
repository = "https://github.com/credmp/hed"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hed"

[dependencies]
clap = "3.0.0-beta.4"
color-eyre = "0.5.11"
faccess = "0.2.3"
regex = "1.5.4"
sudo = "0.6.0"
termion = "1.5.6"

[package.metadata.deb]
maintainer = "Arjen Wiersma <arjen@wiersma.org>"
copyright = "2021, Arjen Wiersma <arjen@wiersma.org>"
license-file = ["LICENSE"]
extended-description = """\
A simple tool to easily manage you hosts file
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/hed", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/hed/README.md", "644"],
]